# EDD_Proyecto1_202031101

./: CMakeLists.txt  README.md  main.cpp
Arboles/: AVL.cpp  B.cpp  arbol_AVL.cpp  arbol_AVL.h
ArchivosH/: Libro.h
ArchivosH/Arboles/: AVL.h  B.h
ArchivosH/Cola/: Cola.h
ArchivosH/Funciones/: CargaCSV.h  Funcionalidades.h  MedidorTiempo.h  Menu.h
ArchivosH/ListaEnlazada/: Lista.h  ListaNormal.h  ListaOrdenada.h
ArchivosH/Nodos/: Nodo.h  NodoAVL.h  NodoB.h
ArchivosH/Pila/: Pila.h
Estructuras/: hyuyiuy.txt
Estructuras/Cola/: Cola.h
Estructuras/ListaEnlazada/: Lista.cpp  ListaEnlazadaSimple.h  ListaNormal.cpp  ListaOrdenada.cpp
Estructuras/Nodo/: Nodo.h
Estructuras/Nodos/: Nodo.cpp  NodoAVL.cpp  NodoB.cpp
Estructuras/Pila/: Pila.h
Funciones/: CargaCSV.cpp  Funcionalidades.cpp  MedidorTiempo.cpp  Menu.cpp
ObjetosLibros/: Libro.cpp  Libro.h
